Fixed line spacing in Contact component for desktop & mobile views

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -70,6 +70,16 @@
   }
 }
 
+@media screen and (height: 602px) and (width: 1280px) and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape) {
+  .contact-image-container {
+    margin-left: 900px;
+  }
+
+  .get-in-touch-container {
+    margin-left: 725px;
+  }
+}
+
 @media screen and (max-width: 428px) {
   .client-list-container {
     padding-right: 0px;
@@ -81,7 +91,7 @@
   }
 
   .contact-image {
-    margin-top: 20px;
+    margin-top: 25px;
     margin-left: 160px;
     height: 90px;
   }
@@ -116,7 +126,7 @@
   }
 
   .contact-image {
-    margin-top: 20px;
+    margin-top: 25px;
     margin-left: 160px;
     height: 90px;
   }
